--- a/src/main/resources/GUI/DictionaryGui.fxml
+++ b/src/main/resources/GUI/DictionaryGui.fxml
@@ -43,15 +43,6 @@
                   <String fx:value="button-translate" />
                </styleClass>
             </Button>
-            <Button fx:id="playButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Game" textFill="#47586b">
-               <font>
-                  <Font size="7.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="text-navi-bar" />
-                  <String fx:value="button-favourite" />
-               </styleClass>
-            </Button>
             <Button fx:id="bookmarkButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="62.0" prefWidth="58.0" text="Lịch sử" textFill="#8e9297">
                <font>
                   <Font size="7.0" />
@@ -61,16 +52,19 @@
                   <String fx:value="button-history" />
                </styleClass>
             </Button>
-            <Button fx:id="GivingWordButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="57.0" prefWidth="58.0" text="GivingWord" textFill="#ccbdbd">
-               <styleClass>
-                  <String fx:value="text-navi-bar" />
-                  <String fx:value="button-favourite" />
-               </styleClass>
-            </Button>
             <Button fx:id="addButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="57.0" prefWidth="58.0" text="Thêm từ" textFill="#ccbdbd">
                <styleClass>
                   <String fx:value="text-navi-bar" />
                   <String fx:value="button-add" />
+               </styleClass>
+            </Button>
+            <Button fx:id="menuGames" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Menu Games" textFill="#47586b">
+               <font>
+                  <Font size="7.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="text-navi-bar" />
+                  <String fx:value="button-favourite" />
                </styleClass>
             </Button>
          </children>
