--- a/src/main/resources/GUI/GameGui.fxml
+++ b/src/main/resources/GUI/GameGui.fxml
@@ -1,27 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GameController">
+<?import javafx.scene.control.Button?>
+<AnchorPane fx:id="Game" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GameController">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0" layoutX="16.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="GivingWord" fitHeight="372.0" fitWidth="228.0" layoutX="111.0" layoutY="76.0" pickOnBounds="true" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="70.0">
             <image>
-                <Image url="@../media/game/Background1.jpg" />
+                <Image url="@../media/game/7.jpg" />
             </image>
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
+            <effect>
+                <DropShadow />
+            </effect>
         </ImageView>
-        <Button fx:id="playButton" layoutX="186.0" layoutY="210.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="205.0" style="-fx-background-insets: 0; -fx-background-radius: 30; -fx-background-color: grey;" text="PLAY">
+        <ImageView fx:id="HangMan" fitHeight="372.0" fitWidth="228.0" layoutX="87.0" layoutY="71.0" pickOnBounds="true" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="70.0">
+            <image>
+                <Image url="@../media/game/1.jpg" />
+            </image>
+            <cursor>
+                <Cursor fx:constant="HAND" />
+            </cursor>
+            <effect>
+                <DropShadow />
+            </effect>
+        </ImageView>
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="87.0" layoutY="479.0" prefHeight="35.0" prefWidth="230.0" text="Hang Man" textAlignment="CENTER">
             <font>
-                <Font size="36.0" />
+                <Font name="System Bold" size="24.0" />
+            </font></Label>
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="482.0" layoutY="480.0" prefHeight="35.0" prefWidth="229.0" text="Giving Word" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font></Label>
+        <Button fx:id="exitButton" layoutY="360.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-background-insets: 0; -fx-background-radius: 30; -fx-background-color: grey;" text="EXIT" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="350.0">
+            <font>
+                <Font size="25.0" />
             </font>
         </Button>
-        <Button fx:id="exitButton" layoutX="186.0" layoutY="320.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="205.0" style="-fx-background-insets: 0; -fx-background-radius: 30; -fx-background-color: grey;" text="EXIT">
-            <font>
-                <Font size="36.0" />
-            </font>
-        </Button>
+
     </children>
 </AnchorPane>
