--- a/src/main/resources/GUI/DictionaryGui.fxml
+++ b/src/main/resources/GUI/DictionaryGui.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="817.0" styleClass="second-color" stylesheets="@../style/navigation.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GeneralController">
+<AnchorPane prefHeight="600.0" prefWidth="817.0" styleClass="second-color" stylesheets="@../style/navigation.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GeneralController">
    <children>
       <VBox alignment="CENTER" prefHeight="74.0" prefWidth="57.0">
          <children>
@@ -43,15 +42,6 @@
                   <String fx:value="button-translate" />
                </styleClass>
             </Button>
-            <Button fx:id="playButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Game" textFill="#47586b">
-               <font>
-                  <Font size="7.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="text-navi-bar" />
-                  <String fx:value="button-favourite" />
-               </styleClass>
-            </Button>
             <Button fx:id="bookmarkButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="62.0" prefWidth="58.0" text="Lịch sử" textFill="#8e9297">
                <font>
                   <Font size="7.0" />
@@ -61,16 +51,19 @@
                   <String fx:value="button-history" />
                </styleClass>
             </Button>
-            <Button fx:id="GivingWordButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="57.0" prefWidth="58.0" text="GivingWord" textFill="#ccbdbd">
-               <styleClass>
-                  <String fx:value="text-navi-bar" />
-                  <String fx:value="button-favourite" />
-               </styleClass>
-            </Button>
             <Button fx:id="addButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="57.0" prefWidth="58.0" text="Thêm từ" textFill="#ccbdbd">
                <styleClass>
                   <String fx:value="text-navi-bar" />
                   <String fx:value="button-add" />
+               </styleClass>
+            </Button>
+            <Button fx:id="menuGames" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Game" textFill="#47586b">
+               <font>
+                  <Font size="7.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="text-navi-bar" />
+                  <String fx:value="button-favourite" />
                </styleClass>
             </Button>
          </children>
