--- a/src/main/resources/GUI/HangmanGui.fxml
+++ b/src/main/resources/GUI/HangmanGui.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.HangmanController">
+<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.HangmanController">
    <children>
       <HBox alignment="CENTER" layoutX="250" layoutY="0" spacing="10">
          <Label style="-fx-font-size: 20; -fx-font-weight: bold; -fx-font-family: 'Arial';" text="H" />
@@ -84,8 +90,12 @@
             <HBox fx:id="guessLetters" spacing="5">
             </HBox>
             <Label layoutX="200" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-font-family: 'Arial';" text="Enter Your Letter: " />
-            <HBox>
-               <TextField fx:id="guessLetter" layoutX="77.0" layoutY="300.0" prefHeight="31.0" prefWidth="200.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 10;" />
+            <HBox prefHeight="41.0" prefWidth="380.0">
+               <TextField fx:id="guessLetter" layoutX="77.0" layoutY="300.0" prefHeight="37.0" prefWidth="200.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 10;" />
+               <Button fx:id="Check" layoutX="351.0" layoutY="512.0" mnemonicParsing="false" onAction="#checkGuess" prefHeight="39.0" prefWidth="97.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Kiểm tra">
+                  <HBox.margin>
+                     <Insets left="8.0" />
+                  </HBox.margin></Button>
 
             </HBox>
 
@@ -96,10 +106,9 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="playAgain" layoutX="490" layoutY="450" mnemonicParsing="false" onAction="#setKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" />
-      <Button fx:id="Exit" layoutX="661.0" layoutY="450.0" mnemonicParsing="false" onAction="#setNotKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Exit" />
+      <Button fx:id="playAgain" layoutX="555.0" layoutY="410.0" mnemonicParsing="false" onAction="#setKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Continue" />
+      <Button fx:id="Exit" layoutX="555.0" layoutY="460.0" mnemonicParsing="false" onAction="#setNotKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Exit" />
       <Label layoutX="150" layoutY="500" style="-fx-font-size: 13; -fx-font-family: 'Arial';" text="Guess letter to complete English word, which has meaning in Vietnamese you see" />
-      <Button fx:id="Check" layoutX="358.0" layoutY="365.0" mnemonicParsing="false" onAction="#checkGuess" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Kiểm tra" />
 
    </children>
 </AnchorPane>
