--- a/src/main/resources/GUI/MenuGame.fxml
+++ b/src/main/resources/GUI/MenuGame.fxml
@@ -10,9 +10,9 @@
 
 <AnchorPane fx:id="GameMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GameMenuController">
     <children>
-        <ImageView fx:id="GivingWord" fitHeight="372.0" fitWidth="228.0" layoutX="111.0" layoutY="76.0" pickOnBounds="true" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="70.0">
+        <ImageView fx:id="GivingWord" fitHeight="298.0" fitWidth="169.0" layoutX="111.0" layoutY="76.0" pickOnBounds="true" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="70.0">
             <image>
-                <Image url="@../media/game/7.jpg" />
+                <Image url="@../media/game/giving.png" />
             </image>
             <cursor>
                 <Cursor fx:constant="HAND" />
@@ -23,7 +23,7 @@
         </ImageView>
         <ImageView fx:id="HangMan" fitHeight="372.0" fitWidth="228.0" layoutX="87.0" layoutY="71.0" pickOnBounds="true" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="70.0">
             <image>
-                <Image url="@../media/game/1.jpg" />
+                <Image url="@../media/game/hangman.png" />
             </image>
             <cursor>
                 <Cursor fx:constant="HAND" />
