--- a/src/main/resources/GUI/DictionaryGui.fxml
+++ b/src/main/resources/GUI/DictionaryGui.fxml
@@ -58,7 +58,7 @@
                   <String fx:value="button-add" />
                </styleClass>
             </Button>
-            <Button fx:id="menuGames" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Game" textFill="#47586b">
+            <Button fx:id="menuGames" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Game" textFill="#6b7e91">
                <font>
                   <Font size="7.0" />
                </font>
