--- a/src/main/resources/GUI/GivingWordGui.fxml
+++ b/src/main/resources/GUI/GivingWordGui.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GivingWordController">
+<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GivingWordController">
     <children>
         <HBox alignment="CENTER" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="40.0">
             <Label style="-fx-font-size: 25; -fx-font-weight: bold; -fx-font-family: 'Arial';" text="Hãy đưa ra nghĩa của từ tiếng Anh sau:" />
@@ -33,12 +37,14 @@
             </HBox>
             <HBox spacing="20">
                 <Label fx:id="ans" prefHeight="40.0" prefWidth="400.0" style="-fx-border-color: green; -fx-border-width: 2; -fx-border-radius: 3;" text="Answer" />
-                <Button fx:id="playAgainButton" mnemonicParsing="false" onAction="#setKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: greeen; -fx-border-width: 2;" text="PlayAgain" />
+                <Button fx:id="playAgainButton" mnemonicParsing="false" onAction="#setKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: green; -fx-border-width: 2;" text="PlayAgain" />
             </HBox>
+            <Button fx:id="hangman" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Hangman Game" />
 
         </VBox>
         <Button fx:id="Exit" layoutX="560.0" layoutY="405.0" mnemonicParsing="false" onAction="#setNotKeepPlaying" prefHeight="40.0" prefWidth="98.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-font-weight: bold; -fx-border-radius: 10;" text="Exit" />
          <Label fx:id="turnsLeft" layoutX="565.0" layoutY="170.0" prefHeight="50" prefWidth="120.0" style="-fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 10; -fx-alignment: center; -fx-pref-width: 100;" text="Số lượt còn lại:">
             </Label>
+
     </children>
 </AnchorPane>
